# ensi

./: Cargo.toml  LICENSE  OPTIMIZATIONS.md  README.md  sgconfig.yml
benches/: game_benchmark.rs  vm_benchmark.rs
bots/: Makefile  README.md  aggressive.c  aggressive.elf  balanced.c  balanced.elf  economic.c  economic.elf  ensi.h  example_bot.c  example_bot.wasm  explorer.c  explorer.elf  linker.ld  start.S
ci/: test
examples/: examine_genome.rs  physics_limit.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_combat.rs  fuzz_economy.rs  fuzz_game_turn.rs
lints/rules/: no-as-imports.yml  no-long-paths.yml
sdk/: Makefile  ensi.h
src/: cli.rs  error.rs  game.rs  gp.rs  isa.rs  lib.rs  main.rs  replay.rs  tournament.rs  vm.rs  wasm.rs
src/cli/: bots.rs  evolve.rs  mod.rs  output.rs  replay.rs  run.rs  tournament.rs  validate.rs  watch.rs
src/game/: combat.rs  economy.rs  invariants.rs  map.rs  player.rs  state.rs  syscalls.rs
src/gp/: compiler.rs  crossover.rs  evolution.rs  fitness.rs  genome.rs  mutation.rs  persistence.rs  selection.rs
src/isa/: instruction.rs  rv32i.rs  rv32m.rs
src/replay/: mod.rs  render.rs  text.rs
src/tournament/: elf.rs  mapgen.rs  mod.rs
src/vm/: cpu.rs  memory.rs
src/vm/jit/: blocks.rs  codegen.rs  mod.rs
src/wasm/: host.rs  mod.rs
tests/: differential.rs  fuzz_tournament.rs  game_integration.rs  prop_game.proptest-regressions  prop_game.rs
